fixed firebase logic preventing username from rendering - needed to jump down an aditional layer in the class

--- a/src/components/Profile/ProfileInsert.module.scss
+++ b/src/components/Profile/ProfileInsert.module.scss
@@ -14,5 +14,9 @@
       padding-bottom: 0;
       margin-bottom: 0;
     }
+    a {
+      text-decoration: none;
+      color: dodgerblue;
+    }
   }
 }
