--- a/src/components/Profile/ProfileUpdateForm.module.scss
+++ b/src/components/Profile/ProfileUpdateForm.module.scss
@@ -42,7 +42,7 @@
   }
 }
 
-form {
+.profileForm {
   ul {
     text-transform: uppercase;
     list-style: none;
